apps/pgadmin/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/pgadmin`)
      kind: Rule
      services:
        - name: pgadmin-service
          port: 80
